Tabbed: overflow: Fix some buttons being cropped
Remove the margin-top from the overflow group buttons as it was
affecting the flex box layout and making other elements being cropped

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -1301,7 +1301,6 @@ input[type='number']:hover::-webkit-outer-spin-button {
 .notebookbar.ui-overflow-group-bottom {
 	display: flex;
 	padding: 0 5px;
-	margin-top: 4px;
 }
 
 .notebookbar .ui-overflow-group-inner {
